Sincronización con origien y mejoras.