@@ -13,13 +13,15 @@ package es.gob.afirma.keystores;
 import java.io.IOException;
 import java.lang.reflect.Method;
 import java.security.KeyStore;
+import java.security.KeyStore.LoadStoreParameter;
+import java.security.KeyStore.ProtectionParameter;
 import java.security.NoSuchAlgorithmException;
 import java.security.Provider;
 import java.security.Security;
 import java.security.cert.CertificateException;
 import java.util.logging.Logger;
 
-import javax.security.auth.callback.PasswordCallback;
+import javax.security.auth.callback.CallbackHandler;
 
 final class AOKeyStoreManagerHelperFullJava {
 
@@ -40,27 +42,43 @@ final class AOKeyStoreManagerHelperFullJava {
 	 * @throws IOException Si hay problemas en la lectura de datos. */
 	static KeyStore initCeresJava(final Object parentComponent) throws AOKeyStoreManagerException,
                                                                        IOException {
+
+    	CallbackHandler callbackHandler;
+    	try {
+    		callbackHandler = (CallbackHandler) Class.forName("es.gob.jmulticard.ui.passwordcallback.gui.CeresCallbackHandler").getConstructor().newInstance(); //$NON-NLS-1$
+    	}
+    	catch (final Exception e) {
+    		throw new AOKeyStoreManagerException("No se han encontrado el gestor de contrasenas para CERES", e); //$NON-NLS-1$
+    	}
+
 		return init(
 			AOKeyStore.CERES,
-			null,
+			buildLoadStoreParameter(callbackHandler),
 			parentComponent,
 			PROVIDER_CERES
 		);
 	}
 
 	/** Inicializa el almac&eacute;n 100% Java para DNIe.
-	 * @param pssCallBack <code>PasswordCallback</code> para la obtenci&oacute;n del PIN.
 	 * @param parentComponent Componente padre para la modalidad del di&aacute;logo de solicitud
 	 *                        de PIN.
 	 * @return <code>KeyStore</code> inicializado.
 	 * @throws AOKeyStoreManagerException Si no se puede inicializar el almac&eacute;n.
 	 * @throws IOException Si hay problemas en la lectura de datos. */
-    static KeyStore initDnieJava(final PasswordCallback pssCallBack,
-    		                     final Object parentComponent) throws AOKeyStoreManagerException,
+    static KeyStore initDnieJava(final Object parentComponent) throws AOKeyStoreManagerException,
     		                                                                 IOException {
+
+    	CallbackHandler callbackHandler;
+    	try {
+    		callbackHandler = (CallbackHandler) Class.forName("es.gob.jmulticard.ui.passwordcallback.gui.DnieCallbackHandler").getConstructor().newInstance(); //$NON-NLS-1$
+    	}
+    	catch (final Exception e) {
+    		throw new AOKeyStoreManagerException("No se han encontrado el gestor de contrasenas para DNIe", e); //$NON-NLS-1$
+    	}
+
     	return init(
 			AOKeyStore.DNIEJAVA,
-			pssCallBack,
+			buildLoadStoreParameter(callbackHandler),
 			parentComponent,
 			PROVIDER_DNIE
 		);
@@ -68,14 +86,14 @@ final class AOKeyStoreManagerHelperFullJava {
 
 
     private static KeyStore init(final AOKeyStore store,
-    		                     final PasswordCallback pssCallBack,
+    							 final LoadStoreParameter loadStoreParameter,
     		                     final Object parentComponent,
     		                     final String providerClassName) throws AOKeyStoreManagerException,
     		                                                            IOException {
     	final Provider p;
-    	if (Security.getProvider(AOKeyStore.CERES.getProviderName()) == null) {
+    	if (Security.getProvider(store.getProviderName()) == null) {
     		try {
-    			p = (Provider) Class.forName(providerClassName).newInstance();
+    			p = (Provider) Class.forName(providerClassName).getConstructor().newInstance();
     			Security.addProvider(p);
     		}
     		catch (final Exception e) {
@@ -95,8 +113,8 @@ final class AOKeyStoreManagerHelperFullJava {
     		LOGGER.warning("No se ha podido establecer el componente padre para los dialogos del almacen: " + e); //$NON-NLS-1$
     	}
 
-    	final KeyStore ks;
         // Inicializamos
+    	final KeyStore ks;
         try {
             ks = KeyStore.getInstance(store.getProviderName());
         }
@@ -105,21 +123,34 @@ final class AOKeyStoreManagerHelperFullJava {
         }
 
         LOGGER.info("Cargando KeyStore 100% Java para " + store.toString()); //$NON-NLS-1$
-        try {
-			ks.load(null, pssCallBack == null ? null : pssCallBack.getPassword());
-		}
-        catch (final NoSuchAlgorithmException e) {
-        	throw new AOKeyStoreManagerException(
-    			"Error de algoritmo al obtener el almacen 100% Java para " + store.toString() + ": " + e, e  //$NON-NLS-1$ //$NON-NLS-2$
-			);
-		}
-        catch (final CertificateException e) {
+		try {
+			ks.load(loadStoreParameter);
+		} catch (final NoSuchAlgorithmException e) {
 			throw new AOKeyStoreManagerException(
-				"Error de certificado al obtener el almacen 100% Java para " + store.toString() + ": " + e, e  //$NON-NLS-1$ //$NON-NLS-2$
-			);
+	    			"Error de algoritmo al obtener el almacen 100% Java para " + store.toString() + ": " + e, e  //$NON-NLS-1$ //$NON-NLS-2$
+				);
+		} catch (final CertificateException e) {
+			throw new AOKeyStoreManagerException(
+					"Error de certificado al obtener el almacen 100% Java para " + store.toString() + ": " + e, e  //$NON-NLS-1$ //$NON-NLS-2$
+				);
 		}
 
         return ks;
     }
 
+    /**
+     * Construye un {@code LoadStoreParameter} en el que se hace uso de un {@code CallbackHandler} para controlar
+     * el paso de mensajes  con el almac&eacute;n.
+     * @param callbackHandler Manejador de mensajes para el almac&eacute;n.
+     * @return Controlador seguro para el paso de mensajes.
+     */
+    private static LoadStoreParameter buildLoadStoreParameter(final CallbackHandler callbackHandler) {
+
+		return new LoadStoreParameter() {
+			@Override
+			public ProtectionParameter getProtectionParameter() {
+				return new KeyStore.CallbackHandlerProtection(callbackHandler);
+			}
+		};
+    }
 }
