@@ -26,6 +26,7 @@ import java.util.Collections;
 import javax.security.auth.callback.PasswordCallback;
 
 import es.gob.afirma.core.InvalidOSException;
+import es.gob.afirma.core.misc.AOUtil;
 import es.gob.afirma.core.misc.Platform;
 import es.gob.afirma.keystores.callbacks.FirstEmptyThenPinUiPasswordCallback;
 
@@ -198,7 +199,7 @@ public final class CAPIKeyStoreManager extends AOKeyStoreManager {
 	        Provider capiProvider = Security.getProvider("SunMSCAPI"); //$NON-NLS-1$
 	        if (capiProvider == null) {
 	            try {
-	            	capiProvider = (Provider) Class.forName("sun.security.mscapi.SunMSCAPI").newInstance(); //$NON-NLS-1$
+	            	capiProvider = (Provider) Class.forName("sun.security.mscapi.SunMSCAPI").getConstructor().newInstance(); //$NON-NLS-1$
 	                Security.addProvider(capiProvider);
 	            }
 	            catch(final Exception e) {
@@ -328,6 +329,10 @@ public final class CAPIKeyStoreManager extends AOKeyStoreManager {
 
     private static void cleanCAPIDuplicateAliases(final KeyStore keyStore) throws NoSuchFieldException,
                                                                                   IllegalAccessException {
+    	// Java 9 no sufre el problema de Alias duplicados
+    	if (AOUtil.isJava9orNewer()) {
+    		return;
+    	}
 
     	Field field = keyStore.getClass().getDeclaredField("keyStoreSpi"); //$NON-NLS-1$
     	field.setAccessible(true);
