@@ -48,6 +48,7 @@ import net.java.xades.security.xml.XAdES.SignerRole;
 import net.java.xades.security.xml.XAdES.SignerRoleImpl;
 import net.java.xades.security.xml.XAdES.XAdES;
 import net.java.xades.security.xml.XAdES.XAdES_BES;
+import net.java.xades.util.DOMOutputImpl;
 
 /** Firmador XAdES OOXML.
  * @author Tom&aacute;s Garc&iacute;a-Mer&aacute;s */
@@ -176,7 +177,7 @@ final class OOXMLXAdESSigner {
 			// provocar un error el no usarla. Normalmente, ClassCastException al recuperar la factoria.
 			fac =  XMLSignatureFactory.getInstance(
 				"DOM", //$NON-NLS-1$
-				(Provider) Class.forName("org.apache.jcp.xml.dsig.internal.dom.XMLDSigRI").newInstance() //$NON-NLS-1$
+				(Provider) Class.forName("org.apache.jcp.xml.dsig.internal.dom.XMLDSigRI").getConstructor().newInstance() //$NON-NLS-1$
 			);
 			LOGGER.info("Se usara la factoria XML del XMLSec instalado"); //$NON-NLS-1$
 		}
@@ -288,7 +289,7 @@ final class OOXMLXAdESSigner {
 	private static void writeXMLwithXALAN(final Writer writer, final Node node, final String xmlEncoding) {
         final LSSerializer serializer = ((DOMImplementationLS) node.getOwnerDocument().getImplementation()).createLSSerializer();
         serializer.getDomConfig().setParameter("namespaces", Boolean.FALSE); //$NON-NLS-1$
-        final com.sun.org.apache.xerces.internal.dom.DOMOutputImpl output = new com.sun.org.apache.xerces.internal.dom.DOMOutputImpl();
+        final DOMOutputImpl output = new DOMOutputImpl();
         output.setCharacterStream(writer);
         if (xmlEncoding != null) {
             output.setEncoding(xmlEncoding);
